--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ header {
       background-image: url(../src/images/mountain.jpg);
       background-repeat: no-repeat;
       background-position: center center;
+      background-size: cover;
       height: 100vh;
 }
 
@@ -78,4 +79,44 @@ h1 {
       cursor: pointer;
       margin-right: 9px;
       border: none;
+}
+
+.taskCardArea {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+}
+
+.addTaskCardButtonArea {
+      margin-left: 1%;
+      margin-top: 25px;
+}
+
+.addTaskCardButton {
+      padding: 10px 18px;
+      border-radius: 50%;
+      font-size: 30px;
+      background-color: rgb(221, 194, 162);
+      box-shadow: 3px 3px 8px 1px black;
+      cursor: pointer;
+      transition: all 0.3s;
+}
+
+.addTaskCardButton:hover {
+      box-shadow: none;
+      transform: translate(3px, 3px);
+}
+
+.taskCardTitleAndTaskCardDeleteButtonArea {
+      display: flex;
+      justify-content: space-between;
+}
+
+.taskCardDeleteButton {
+      border: none;
+      background-color: rgb(288, 288, 288);
+      cursor: pointer;
+      font-size: 16px;
+      color: rgb(158, 46, 46);
 }
